[workspace]
members = [
    "01_arrays",
    "02_hash_maps",
    "03_strings",
    "04_linked_lists",
    "05_stacks_queues",
    "06_sorting",
    "07_trees",
    "08_heaps",
    "09_tries",
    "10_graphs",
    "11_bit_manipulation",
    "12_dynamic_programming",
    "13_backtracking",
    "14_greedy",
]
resolver = "2"
